--- a/template-haskell.cabal
+++ b/template-haskell.cabal
@@ -5,7 +5,7 @@ license-file:	LICENSE
 maintainer:	libraries@haskell.org
 description:
 	XXX write or steal me
-build-depends: base
+build-depends: base, pretty
 exposed-modules:
 	Language.Haskell.TH.Syntax,
     Language.Haskell.TH.PprLib,
