--- a/template-haskell.cabal
+++ b/template-haskell.cabal
@@ -6,7 +6,7 @@ maintainer:	libraries@haskell.org
 description:
     Facilities for manipulating Haskell source code using Template Haskell.
 build-type: Simple
-build-depends: base, pretty, packedstring, containers, syb
+build-depends: base, pretty, packedstring, containers
 exposed-modules:
 	Language.Haskell.TH.Syntax,
     Language.Haskell.TH.PprLib,
