--- a/template-haskell.cabal
+++ b/template-haskell.cabal
@@ -3,20 +3,28 @@ version:	2.3.0.0
 license:	BSD3
 license-file:	LICENSE
 maintainer:	libraries@haskell.org
+bug-reports: http://hackage.haskell.org/trac/ghc/newticket?component=Template%20Haskell
 description:
     Facilities for manipulating Haskell source code using Template Haskell.
 build-type: Simple
-build-depends: base, pretty, packedstring, containers
-exposed-modules:
-	Language.Haskell.TH.Syntax,
-    Language.Haskell.TH.PprLib,
-    Language.Haskell.TH.Ppr,
-    Language.Haskell.TH.Lib,
-    Language.Haskell.TH.Quote,
-    Language.Haskell.TH
-extensions: MagicHash, PatternGuards, PolymorphicComponents,
-            DeriveDataTypeable, TypeSynonymInstances
--- We need to set the package name to template-haskell (without a
--- version number) as it's magic.
-ghc-options: -package-name template-haskell
+Cabal-Version: >= 1.2
+
+Library
+    build-depends: base, pretty, packedstring, containers
+    exposed-modules:
+        Language.Haskell.TH.Syntax
+        Language.Haskell.TH.PprLib
+        Language.Haskell.TH.Ppr
+        Language.Haskell.TH.Lib
+        Language.Haskell.TH.Quote
+        Language.Haskell.TH
+    extensions: MagicHash, PatternGuards, PolymorphicComponents,
+                DeriveDataTypeable, TypeSynonymInstances
+    -- We need to set the package name to template-haskell (without a
+    -- version number) as it's magic.
+    ghc-options: -package-name template-haskell
+
+source-repository head
+    type:     darcs
+    location: http://darcs.haskell.org/packages/template-haskell/
 
