--- a/template-haskell.cabal
+++ b/template-haskell.cabal
@@ -10,7 +10,8 @@ build-type: Simple
 Cabal-Version: >= 1.6
 
 Library
-    build-depends: base, pretty, containers
+    build-depends: base >= 3 && < 5,
+                   pretty, containers
     exposed-modules:
         Language.Haskell.TH.Syntax.Internals
         Language.Haskell.TH.Syntax
