--- a/template-haskell.cabal
+++ b/template-haskell.cabal
@@ -1,5 +1,6 @@
 name:		template-haskell
 version:	2.8.0.0
+-- GHC 7.6.1 released with 2.8.0.0
 license:	BSD3
 license-file:	LICENSE
 maintainer:	libraries@haskell.org
